02_test_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: readiness-pod
  namespace: kubernetes-101-namespace
spec:
  containers:
  - name: sise
    image: learnk8s/demo:1.0.0
    ports:
    - containerPort: 3000
    readinessProbe:
      initialDelaySeconds: 2
      periodSeconds: 5
      httpGet:
        path: /health
        port: 3000
    livenessProbe:
      initialDelaySeconds: 2
      periodSeconds: 5
      httpGet:
        path: /health
        port: 3000
