04_database_pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: database-pod
  namespace: kubernetes-101-namespace
  labels:
    app: database-test
spec:
  containers:
  - name: database
    image: mysql:8.0.29
    ports:
    - containerPort: 3306
    - containerPort: 33060
    startupProbe:
      failureThreshold: 5
      periodSeconds: 10
      tcpSocket:
        port: 3306
    readinessProbe:
      initialDelaySeconds: 10
      periodSeconds: 5
      tcpSocket:
        port: 3306
    livenessProbe:
      initialDelaySeconds: 10
      periodSeconds: 5
      tcpSocket:
        port: 3306
