11_database_stateful_set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: database-stateful-set
  namespace: kubernetes-101-namespace
  labels:
    app: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  serviceName: "database"
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
      - name: database
        image: mysql:8.0.29
        ports:
        - containerPort: 3306
        - containerPort: 33060
        startupProbe:
          failureThreshold: 5
          periodSeconds: 10
          tcpSocket:
            port: 3306
        readinessProbe:
          initialDelaySeconds: 10
          periodSeconds: 5
          tcpSocket:
            port: 3306
        livenessProbe:
          initialDelaySeconds: 10
          periodSeconds: 5
          tcpSocket:
            port: 3306
        volumeMounts:
        - name: database-volume
          mountPath: /var/lib/mysql
      volumes:
      - name: database-volume
        persistentVolumeClaim:
          claimName: database-persistent-volume-claim
