1_site_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: site-pod
  labels:
    app: site-test
spec:
  containers:
  - name: site
    image: wordpress:php8.1-apache
    ports:
    - containerPort: 80
    readinessProbe:
      initialDelaySeconds: 2
      periodSeconds: 5
      httpGet:
        path: /
        port: 80
    livenessProbe:
      initialDelaySeconds: 2
      periodSeconds: 5
      httpGet:
        path: /
        port: 80
