3_site_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: site-deployment
  namespace: kubernetes-101-namespace
  labels:
    app: site
spec:
  replicas: 2
  selector:
    matchLabels:
      app: site
  template:
    metadata:
      labels:
        app: site
    spec:
      containers:
      - name: site
        image: wordpress:php8.1-apache
        ports:
        - containerPort: 80
