8_phpmyadmin_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: database-admin-pod
spec:
  containers:
  - name: database-admin
    image: phpmyadmin:5.2.0-apache
    ports:
    - containerPort: 80
    readinessProbe:
      initialDelaySeconds: 2
      periodSeconds: 5
      httpGet:
        path: /
        port: 80
