12_site_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: site-service
  namespace: kubernetes-101-namespace
spec:
  selector:
    app: site
  type: LoadBalancer # Provides an externally-accessible IP address.
  ports:
    - port: 80
      protocol: TCP
      nodePort: 30000
