13_database_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-service
  namespace: kubernetes-101-namespace
spec:
  selector:
    app: database
  ports:
    - port: 3306
      protocol: TCP
      name: mysqld
    - port: 33060
      protocol: TCP
      name: x-plugin
